--- a/blog/build.gradle
+++ b/blog/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
-group = 'me.shinsunyoung'
+group = 'me.woo'
 version = '1.0-SNAPSHOT'
 
 repositories {
