--- a/blog/src/main/resources/application.yml
+++ b/blog/src/main/resources/application.yml
@@ -1,4 +1,9 @@
+logging:
+  level:
+    root: debug
 spring:
+  main:
+    allow-bean-definition-overriding: true
   jpa:
     # 전송 쿼리 확인
     show-sql: true
