--- a/base-study/build.gradle
+++ b/base-study/build.gradle
@@ -19,8 +19,8 @@ repositories {
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     runtimeOnly('com.h2database:h2') // 인메모리 데이터베스 H2, 로컬, 테스트환경에서 사용하기 위해
-    compileOnly('org.projectlombok:lombok')
-    annotationProcessor('org.projectlombok:lombok')
+//    compileOnly('org.projectlombok:lombok')
+//    annotationProcessor('org.projectlombok:lombok')
     implementation('org.springframework.boot:spring-boot-starter-web')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
