--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,17 @@ spring:
   h2:
     console:
       enabled: true
+
+jwt:
+  issuer: blog.com
+  secret_key: blog-springboot
+
+#  jwt.clock-skew-sec=300
+#  jwt.expiration-sec=86400
+#  jwt.issuer=ai.lgstation.com
+#  jwt.secret=ai-service-portal-secret
+#  aicc.crypto.jwt.keyphrase=baDvAxVxYHwHS6Dw
+#  #jwt keystore
+#  jwt.key-store=jwt-key.p12
+#  jwt.key-store-alias=jwtaeskey
+#  jwt.key-store-password=!aisp00
